--- a/demonstrateurs/piezo/css/piezo.css
+++ b/demonstrateurs/piezo/css/piezo.css
@@ -20,23 +20,40 @@
 	a:hover { text-decoration: underline; color: #0000FF; background: #ffa; }
 	a:active { color: #FF0000; background: transparent; }
 	
-	header
-	{
+	h1 {
 		left: 0;
 		top: 0;
-		width:100%;
-		height: 50px;
-		background-color: dodgerblue;
-		font-family: "Sierra Madre";
-	}
-	h1 {
-		margin:0; padding:2px;
+		padding:2px;
 		line-height:50px; 
 		width:100%;
 		margin:auto; 
 		text-align: center;
-		color: white; 
+		color: dodgerblue; 
+		height: 50px;
+		background-color: white;
+		font-family: "Sierra Madre";
+		font-size: 28px;
 	}
+	h1 img {
+		vertical-align:top;
+	}
+	h1 a:link {	text-decoration: none; color: dodgerblue; }
+	h1 a:visited {  text-decoration: none; color: dodgerblue; }
+	h1 a:hover { text-decoration: none; color: dodgerblue; }
+	h1 a:active { text-decoration: none; color: dodgerblue;}
+
+	#brgm {
+		position: absolute;
+		top: 0;
+		left: 0;
+		padding: 2px;
+	}	
+	#afb {
+		position: absolute;
+		top: 0;
+		right: 1vw;
+		padding: 2px;
+	}	
 	
 	.ol-popup {
         position: absolute;
